Permite voltar a página inicial

--- a/Siath/app/templates/login.html
+++ b/Siath/app/templates/login.html
@@ -21,6 +21,10 @@
         <br>
         <br>
         <input type="submit" value="Logar">
+        <br>
+        <br>
+        <br>
+        <a href="/"><h1>Voltar a página inicial</h1><a>
     </div>
 
 </body>
