--- a/Siath/app/templates/register.html
+++ b/Siath/app/templates/register.html
@@ -25,6 +25,10 @@
         <br>
         <br>
         <input type="submit" value="Realizar registro">
+        <br>
+        <br>
+        <br>
+        <a href="/"><h1>Voltar a página inicial</h1><a>
     </div>
 
 </body>
